--- a/main.css
+++ b/main.css
@@ -47,6 +47,196 @@ h3 {
     margin-top: 90px;
 }
 
+/****** CSS Transitions, Animations and Transformations ******/
+
+.container {
+  height: 25vmin;
+  width: 25vmin;
+  background-color: teal;
+}
+
+.cssProperties {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.container-one {
+  padding: 1vmin;
+}
+
+.orbiting-circle {
+  height: 25%;
+  width: 25%;
+  background-color: darkred;
+  border-radius: 50%;
+  animation: orbit 3s linear infinite;
+}
+
+.container-two {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.morphing-circle {
+  height: 25%;
+  width: 25%;
+  background-color:darkred;	
+  border-radius: 50%;
+  transition: border-radius .5s ease, 
+              background-color .5s ease, 
+              transform .5s ease .5s;
+animation: morphing-circle-square 3s linear infinite; 
+}
+.container-two:hover .morphing-circle {
+  border-radius: 0;
+  background-color:  white;
+  transform: rotate(90deg);
+}
+
+.container-three {
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.rectleft {	
+  height: 25%;
+  width: 12.5%;
+  background-color: darkred;
+  border-radius: 50px 0px 0px 50px;
+  animation: rectleft 3s linear infinite;
+
+}
+
+.rectright {	
+  height: 25%;
+  width: 12.5%;
+  background-color: darkred;
+  border-radius: 0px 50px 50px 0px;
+  animation: rectright 3s linear infinite;
+
+}
+
+/****** Hokey Pokey *****/
+.dance {
+  padding: 20px 0px;
+  max-width: 20%;
+  margin: auto;
+  text-align: center;
+}
+.rightin {
+height: 100px;
+width: 100px;
+margin: 30px;
+padding: 10px;
+background: orange;
+color: white;
+text-align: center;
+transition: 1s;
+}
+
+.rightin:hover {
+  transform: skew(20deg,20deg);
+}
+
+.rightout {
+  height: 100px;
+  width: 100px;
+  margin: 30px;
+  padding: 10px;
+  background: orange;
+  color: white;
+  text-align: center;
+  transition: 1s;
+}
+
+.rightout:hover {
+  transform: translate3d(-20px, -20px, -5px);
+}
+.leftin {
+  height: 100px;
+  width: 100px;
+  margin: 30px;
+  padding: 10px;
+  background: orange;
+  color: white;
+  text-align: center;
+  transition: 1s;
+}
+
+.leftin:hover {
+  transform: skew(-20deg, -20deg);
+}
+.shake {
+  height: 100px;
+  width: 100px;
+  margin: 30px;
+  padding: 10px;
+  background: orange;
+  color: white;
+  text-align: center;
+  transition-delay: .2s;
+}
+
+.shake:hover {
+  animation: shake 0.5s;
+  transform: skew(-10deg, -10deg);
+}
+
+.hokey {
+  height: 100px;
+  width: 100px;
+  margin: 30px;
+  padding: 10px;
+  background: orange;
+  color: white;
+  text-align: center;
+  transition: 1s;
+}
+
+.hokey:hover {
+  transform: rotate(360deg);
+}
+
+.about {
+  height: 100px;
+  width: 100px;
+  margin: 30px;
+  padding: 10px;
+  background: orange;
+  color: white;
+  text-align: center;
+  transition: 1s;
+}
+
+.about:hover {
+  transform: scale(2);
+}
+
+/****** Magic Trick ******/
+.square {
+  width: 250px;
+  height: 250px;
+  margin: 20px;
+  display: inline-block;
+  background: purple;
+  transition: opacity 2.5s; 
+}
+
+#magic {
+  background-color: blue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+
 /****** Pacman KeyFrames ******/
   @keyframes mouthTop {
     50% {
@@ -64,5 +254,98 @@ h3 {
     }
     100% {
       left: 100%;
+    }
+  }
+
+/****** CSS Properties Keyframes ******/
+  @keyframes orbit {
+    0% { transform: translate(0,0); }
+    5% { transform: translate(0,0); } 
+    25% { transform: translate(300%,0%); } 
+    30% { transform: translate(300%,0%); } 
+    50% { transform: translate(300%,300%); } 
+    55% { transform: translate(300%,300%); }
+    75% { transform: translate(0%,300%); }
+    80% { transform: translate(0%,300%); }
+    100% { transform: translate(0%,0%); }
+  }
+  
+  @keyframes morphing-circle-square {
+    0% {border-radius: 50%}
+    25% {
+        border-radius: 50%;
+        background-color: darkred;
+    }
+    50% { 
+        border-radius: 0%;
+        background-color: white;
+        transform: rotate(0deg);
+    }
+    75% { 
+        border-radius: 0%;
+        background-color: white;
+        transform: rotate(90deg);   
+    }
+    100% { 
+        border-radius: 50%;
+        background-color: darkred;
+        transform: rotate(90deg);
+    }
+  }
+  
+  @keyframes rectright {
+  100% {transform: translate(50%,0%);}
+  30% {transform: translate(50%,0%);}
+  20% {transform: translate(0%,0%);}
+    }
+  @keyframes rectleft {
+  100% {transform: translate(-50%,0%);}
+  30% {transform: translate(-50%,0%);}
+  20% {transform: translate(0%,0%);}
+  }
+
+  /****** Hokey Pokey Keyframes ******/
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+  /****** Weather Keyframes ******/
+  @keyframes rainOne {
+    0% {
+      bottom: 260px;
+    }
+    100% {
+      bottom: 200px;
+      opacity: 0;
+    }
+  }
+  
+  @keyframes rainTwo {
+    0% {
+      bottom: 290px;
+    }
+    100% {
+      bottom: 200px;
+      opacity: 0;
+    }
+  }
+  
+  @keyframes rainThree {
+    0% {
+      bottom: 280px;
+    }
+    100% {
+      bottom: 200px;
+      opacity: 0;
     }
   }
